# aetherium-lite-app

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build-profile.json5  hvigorfile.ts  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: BUILD_FROM_SOURCE.md  OPEN_SOURCE.md  RUNTIME_ARCHITECTURE_AND_SOURCE_GUIDE.md  dualsense-vds-harmonyos-plan.md  鸿蒙Proton移植原神SDK可行性.md
entry/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
entry/src/main/ets/: AutoStage.ets  WineAbilityRouting.ets  WineWindowLaunch.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/mainability/: MainAbility.ets
entry/src/main/ets/pages/: Index.ets  WineWindow.ets
entry/src/main/ets/winefulldesktopability/: WineFullWindowsDesktopExperienceAbility.ets
entry/src/main/ets/winestandalonewindowability/: WineStandaloneWindowAbility.ets
entry/src/main/ets/winewindowability/: WineWindowAbility.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/rawfile/genshin-impact-game/: PROTON_PLACEHOLDER.txt
entry/src/main/resources/rawfile/mihoyo-launcher/: PROTON_PLACEHOLDER.txt
entry/src/main/resources/rawfile/win32-smoke/: PROTON_PLACEHOLDER.txt
entry/src/ohosTest/: module.json5
proton/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
proton/src/main/: module.json5
proton/src/main/cpp/: CMakeLists.txt  box64_adapter.cpp  napi_init.cpp  runtime_bridge.cpp  runtime_bridge.h  wine_server_bridge.cpp
proton/src/main/cpp/types/libproton/: Index.d.ts  oh-package.json5
proton/src/main/ets/: Index.d.ts  Index.ets
proton/src/main/ets/pages/: HspNoop.ets
proton/src/main/ets/workers/: WineProcessWorker.ets
proton/src/main/resources/base/element/: string.json
proton/src/main/resources/base/profile/: main_pages.json
scripts/proton-runtime/: README.md  apply_corresponding_source_patches.sh  audit_licenses.sh  bootstrap_runtime_sources.sh  fetch_sources.sh
tools/win32-smoke/: d3d11_smoke.c  smoke_win32.c  tiny_game_win32.c  uxtheme_stub.c
